src/test/deca/context/invalid/resultats/test10_ifThenElse-ima.res
  IMA -- Fichier ./src/test/deca/context/invalid/test10_ifThenElse.ass introuvable
